--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -11,7 +11,7 @@
 	<!-- load bootstrap from CDN and custom CSS -->
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.1/paper/bootstrap.min.css">
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.1/animate.min.css">
-	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="assets/css/main.css">
 
 	<!-- JS -->
 	<!-- load angular and angular-route via CDN -->
@@ -37,9 +37,10 @@
 		<div class="navbar navbar-inverse">
 			<div class="container">
 				<div class="navbar-header">
-		          	<a class="navbar-brand" href="#">Imgur clone by {{main.name}}</a>
+		          	<a class="navbar-brand" href="/">Imgur clone by {{main.name}}</a>
 		        </div>
 			</div>
+			<div class="progressbar"><div class="innerprogress"></div></div>
 		</div>
 	</header>
 	<main class="container">
