--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -37,7 +37,7 @@
 		<div class="navbar navbar-inverse">
 			<div class="container">
 				<div class="navbar-header">
-		          	<a class="navbar-brand" href="/">Imgur clone by {{main.name}}</a>
+		          	<a class="navbar-brand" href="/">Imgur clone</a>
 		        </div>
 			</div>
 			<div class="progressbar"><div class="innerprogress"></div></div>
