added some beginner layout functionality

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -44,7 +44,7 @@
 		</div>
 	</header>
 	<main class="container">
-		<div ng-view></div>
+		<div class="viewcont" ng-view></div>
 	</main>
 </body>
 </html>
