--- a/public/app/views/pages/album.html
+++ b/public/app/views/pages/album.html
@@ -1,5 +1,5 @@
 <h1>Upload succesful!</h1>
-<h3>{{album.name}}</h3>
+<h3>{{album.name}}<i class="glyphicon glyphicon-th-large layoutbutton" ng-click="album.changeLayout()"></i></h3>
 
 <span ng-repeat="link in album.links">
 	<span class="img" style="background-image:url({{link.amazonLink}});">	
