--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,13 +1,19 @@
+html, body, .container, .viewcont {
+	height: 100%;
+}
+
 .img {
 	position: relative;
     float: left;
-    width: 180px;
-    height: 150px;
+    width: 24%;
+    height: 27%;
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: cover;
     border: 4px solid #87C3F3;
-    margin-left: 5px;
+    margin: 5px 0 0 5px;
+    -webkit-transition: all .6s;
+    transition: all .6s;
 }
 
 .progressbar {
@@ -20,4 +26,15 @@
 .innerprogress {
 	height: 4px;
 	background: #133754;
+}
+
+.layoutbutton {
+	margin-right: 20px;
+	float: right;
+    color: #2196F3;
+    cursor: pointer;
+}
+
+.layoutbutton:hover {
+	color: #DA525D;
 }
