shit ton of stuff changed

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -14,6 +14,8 @@
 	<!-- <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.1/paper/bootstrap.min.css">
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.1/animate.min.css"> -->
 	<link rel="stylesheet" href="assets/css/main.css">
+	<link rel="stylesheet" href="assets/css/css/font-awesome.min.css">
+
 
 	<!-- JS -->
 	<!-- load angular and angular-route via CDN -->
@@ -27,11 +29,13 @@
 	<script src="app/controllers/imageCtrl.js"></script>
 	<script src="app/controllers/uploadCtrl.js"></script>
 	<script src="app/controllers/headerController.js"></script>
-
+	<script src="app/controllers/commentCtrl.js"></script>
 
 	<!-- components -->
 	<script src="app/components/uploadComp.js"></script>
 	<script src="app/components/headerComp.js"></script>
+	<script src="app/components/comments.js"></script>
+
 
 	<!-- services -->
 	<script src="app/services/uploadService.js"></script>
