--- a/public/app/views/pages/header.html
+++ b/public/app/views/pages/header.html
@@ -1,6 +1,8 @@
 <header>
 	<div>
       	<a class="" href="/">Imgur clone</a>
-      	<div class="uploadButtonWhite uploadModal" ng-click="header.openUploadModal()">Upload an image</div>
+      	<div ng-click="header.openUploadModal()" class="uploadButtonWhite uploadModal">Upload 
+      		<i class="fa fa-upload" style="margin-left: 5px;"></i>
+  		</div>
 	</div>
 </header>
