--- a/public/app/views/pages/upload.html
+++ b/public/app/views/pages/upload.html
@@ -4,4 +4,5 @@
 		<div class="uploadButtonGray">Pick your image(s)</div>
 	</label>
 	<div type="button" class="uploadButtonGray" ng-click="image.upload(); image.closeModal();" id="upload-button">Upload</div>
+	<input type="text" name="submissionTitle" placeholder="Title your submission?" class="submissionTitle">
 </form>
