--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -6,6 +6,7 @@ html, body, .container, .viewcont {
     padding: 0;
     margin: 0;
     height: 100%;
+    width: 100%;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -17,20 +18,30 @@ a:hover {
     text-decoration: none;
 }
 
+ul {
+    text-decoration: none;
+    list-style-type: none;
+    padding: 0;
+}
+
 header {
     width: 100%;
     height: 60px;
     padding-left: 140px;
-    background: #a5a5a5;
-    color: white; 
+    background: #e8e8e8;
+    color: #737373; 
 }
 
 header a {
     margin-top: 6px !important;
     display: inline-block;
     font-size: 34px;
-    color: white;
+    color: #868686;
     font-family: 'Amatic SC', cursive;
+}
+
+.PL10 {
+    padding-left: 10px !important;
 }
 
 .modal h3 {
@@ -62,17 +73,39 @@ header a {
     cursor: pointer;
     background: white;
     color: #828282;
+    border-radius: 6px;
     display: inline-block;
 }
 
 .uploadButtonWhite {
-    border: 2px solid white;
+    border: 2px solid #ffffff;
     padding: 4px 12px;
     font-weight: 200;
     cursor: pointer;
-    background: #a5a5a5;
-    color: #ffffff;
+    background: #e8e8e8;
+    border-radius: 6px;
+    color: #868686;
     display: inline-block;
+}
+
+.title {
+    text-align: center;
+    color: #5d5f6f;
+    font-weight: 300;
+    font-size: 26px;
+    width: 40%;
+    padding: 10px 0;
+    margin: 0 auto;
+    border-radius: 6px;
+}
+
+.submissionTitle {
+    margin-top: 10px;
+    border: 1px solid #00fff1;
+    height: 30px;
+    width: 245px;
+    border-radius: 6px;
+    padding-left: 5px;
 }
 
 .contwrapper {
@@ -136,15 +169,40 @@ header a {
     transition: all .3s ease-in-out;
 }
 
-.img {
-	position: relative;
-    float: left;
+.imgWrap {
     width: 250px;
     height: 200px;
-    border: 3px solid #c7c7c7;
     margin: 5px 0 0 5px;
     cursor: pointer;
+    border: 6px solid #e8e8e8;
+    display: inline-block;
+}
+
+.imgWrap:hover > .imgControlPanel {
+    display: block;
+}
+
+.img {
     object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.imgControlPanel {
+    position:absolute; 
+    width: 238px;
+    display: none;
+}
+
+.imgControls {
+    width: 25%;
+    float: left;
+    height: 30px;
+    background: gray;
+    text-align: center;
+    padding-top: 2px;
+    font-size: 22px;
+    opacity: .7;
 }
 
 .uploadModal {
@@ -175,3 +233,49 @@ header a {
 .layoutbutton:hover {
 	color: #DA525D;
 }
+
+/* Comment section */
+
+.commentSection {
+    margin: 20px 0 60px 180px;
+}
+
+.commentSection .submission {
+    font-size: 20px;
+    color: #5d5f6f;
+    width: 720px;
+    min-height: 100px;
+    padding-top: 10px;
+    padding-left: 10px;
+    border-radius: 6px;
+}
+
+.commentSection .submission:nth-child(odd) {
+    background: #f1f1f1;
+}
+
+.commentSection .submission:nth-child(even) {
+    background: #d4d4d4;
+}
+
+.commentSection .username {
+    
+}
+
+.commentSection .content {
+    display: block;
+    padding-top: 10px;
+}
+
+.commentBtn {
+    display: block;
+    border: 1px solid #00fff1;
+    padding: 5px;
+    color: #8e8e8e;
+    width: 160px;
+    border-radius: 6px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+/* Comment section */
